--- a/Presentacion/css/estilosLogin.css
+++ b/Presentacion/css/estilosLogin.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;	
-  background-image: url(../IMAGENES/gropu.jpg);
+  background-image: url(../Imagenes/img1.jpg) ;
   background-repeat: no-repeat;
   background-size:cover;
   width: 100%;
